--- a/public/index.html
+++ b/public/index.html
@@ -22,4 +22,18 @@
     hr {
         margin: 0;
     }
+    
+    @media (min-width: 992px) {
+        .container {
+            min-height: 430px;
+        }
+    }
+    
+    @media (min-width: 1220px) {
+        .container {
+            margin: 0 auto;
+            padding: 2rem 5rem;
+            min-height: 750px;
+        }
+    }
 </style>
